[gd_scene load_steps=4 format=2]

[ext_resource path="res://standardfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://borderstylebox.tres" type="StyleBox" id=2]
[ext_resource path="res://LoadSavePrompt.gd" type="Script" id=3]

[node name="LoadSavePrompt" type="Node2D"]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 200.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 124, 41 )
custom_colors/font_color = Color( 0.988235, 0.921569, 0.713726, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = ExtResource( 2 )
text = "You've collected N Greenalities before. Continue from there?"
autowrap = true

[node name="ButtonConfirm" type="Button" parent="."]
margin_left = 9.0
margin_top = 30.0
margin_right = 87.0
margin_bottom = 57.0
custom_colors/font_color_disabled = Color( 0.756863, 0.54902, 0.447059, 1 )
custom_colors/font_color_focus = Color( 0.988235, 0.921569, 0.713726, 1 )
custom_colors/font_color = Color( 0.988235, 0.921569, 0.713726, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "Continue (X)"

[node name="ButtonCancel" type="Button" parent="."]
margin_left = 106.0
margin_top = 30.0
margin_right = 188.0
margin_bottom = 57.0
custom_colors/font_color_disabled = Color( 0.756863, 0.54902, 0.447059, 1 )
custom_colors/font_color_focus = Color( 0.988235, 0.921569, 0.713726, 1 )
custom_colors/font_color = Color( 0.988235, 0.921569, 0.713726, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
text = "New Game (Z)"
